[package]
name = "rialo-http-get-interface"
version = "0.1.0"
edition = "2021"
description = "Interface for HTTP GET program"
license = "Apache-2.0"

[dependencies]
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-instruction = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }